2009-01-23  higepon  <higepon@users.sourceforge.jp>

        * dbi: Added dbi.ss library and tests. (They are empty now).

        * test/clos.scm : Added test for Tiny CLOS.

2009-01-22  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added output-port?.

        * test/mysql.scm: Added test for mysql library.

        * Added configure option --with-mysql
        ./configure --with-mysql=/usr/lib/libmysqlclient.so.15

        * lib/mysql.ss (libmysqlclient): Completed.

2009-01-21  higepon  <higepon@users.sourceforge.jp>

    * FFIProcedures.cpp (callStub): Now FFI works on X86-64 Linux yeah!.

    * ffitest.c: Added add8 for x86-64.

        * Now Mosh works on PS3 gentoo Linux.(See http://d.hatena.ne.jp/mjt/20090121/p3 )

2009-01-20  kokosabu  <kokosabu@gmail.com>

        * FileBinaryOutputPort.cpp: Implemented buffer mode.

2009-01-20  higepon  <higepon@users.sourceforge.jp>

        * Now Mosh works on x86-64 Linux.

        * Added %ffi-supporeted? procedure.

        * FFIProcedures.cpp : Disabled ffi procedure when not IA32.

        * configure.ac: Added architecture check.

        * Bignum.h : Added code for 64bit.

        * scheme.h: Fixed the size bug of ucs4char. It causes crash on Linux 64bit.

2009-01-19  kokosabu <kokosabu@gmail.com>

        * Changed: file buffer size.

2009-01-18  higepon  <higepon@users.sourceforge.jp>

        * lib/mysql.ss : Added mysql library. It's not enough yet.

        * lib/mosh/ffi.ss (stub-ht): Added mapping (char* . ,%ffi-call->string-or-zero).

        * Added %ffi-call->string-or-zero.

2008-01-18  kokosabu  <kokosabu@gmail.como>

        * FileBinaryOutputPort.cpp: Implemented block mode.

2009-01-17  higepon  <higepon@users.sourceforge.jp>

        * test/ffi.scm (libmysqlclient): check the return value of mysql-real-connect.

2009-01-17  kokosabu  <kokosabu@gmail.com>

        * FileBinaryInputPort.cpp: Added buffer mode.

2009-01-15  higepon  <higepon@users.sourceforge.jp>
