@@ -8,8 +8,8 @@
 ;; conn is sub-class of <connection>
 (test/t (if (memq <connection> (class-direct-supers (class-of conn))) #t #f))
 
-;; (define query (dbi-prepare conn "select * from user"))
+(define query (dbi-prepare conn "select * from user"))
 
-;; ;; conn is <query> or sub-class of query
-;; (test/t (or (eq? (class-of query) <query>)
-;;             (memq <query> (class-direct-supers (class-of query)))))
+;; query is <query> or sub-class of query
+(test/t (or (eq? (class-of query) <query>)
+            (memq <query> (class-direct-supers (class-of query)))))
